# dependency-agent

./: .gitignore  README.md  justfile  pom.xml  pyproject.toml
dependency-agent-sample/log4j-logback-conflict/: README.md  pom.xml
dependency-agent-sample/log4j-logback-conflict/src/main/java/com/example/: App.java
dependency-agent-sample/multi-module-resolution/: README.md  pom.xml
dependency-agent-sample/multi-module-resolution/core/: pom.xml
dependency-agent-sample/multi-module-resolution/web/: pom.xml
dependency-agent-sample/simple-slf4j-conflict/: README.md  pom.xml
dependency-agent-sample/simple-slf4j-conflict/src/main/java/com/example/: App.java
docs/: HACKATHON.md
maven/demo-app/: pom.xml  pom_that_do_not_work.xml
maven/demo-app/src/main/java/com/example/: App.java
maven/dependency-agent-sample/log4j-logback-conflict/: README.md  pom-broken.xml  pom.xml
maven/dependency-agent-sample/log4j-logback-conflict/src/main/java/com/example/: App.java
maven/dependency-agent-sample/multi-module-resolution/: README.md  pom-broken.xml  pom.xml
maven/dependency-agent-sample/multi-module-resolution/core/: pom-broken.xml  pom.xml
maven/dependency-agent-sample/multi-module-resolution/web/: pom-broken.xml  pom.xml
maven/dependency-agent-sample/simple-slf4j-conflict/: README.md  pom-broken.xml  pom.xml
src/dependency_agent/: cli.py
