[project]
name = "dependency-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "openai>=1.85.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
depguy = "dependency_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
